2002-01-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02908] document code of frame
	* frame.c (renderFrame): save document_code if JP_CHARSET

2002-01-25  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02904]
	* rc.c (N_STR): use cpp stringification

2002-01-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02902] mouse inactive after calling some command with ALARM.
	* main.c (SigAlarm): mouse_inactive() and mouse_active()

2002-01-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02901] Default URL for GOTO*
	* fm.h (DEFAULT_URL_*): added
	* fm.h (DefaultURLString): added
	* main.c (cmd_loadURL): add arg `referer'
	* main.c (goURL0): 2nd arg is `relative' flag
		check DefaultURLString
		if relative, then current and referer is set
	* main.c (ldhelp): cmd_loadURL arg changes
	* main.c (deletePrevBuf): ditto
	* main.c (cmd_loadBuffer): ditto
	* main.c (adBmark): ditto
	* main.c (follow_map): ditto
	* rc.c (CMT_DEFAULT_URL): added
	* rc.c (defaulturls): added
	* rc.c (params9): add "default_url"

2002-01-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02901] DNS_ORDER_*
	* fm.h (DNS_ORDER_*): added
	* rc.c (dnsorders): use N_S(DNS_ORDER_*)

2002-01-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
	
	* [w3m-dev 02901] ACCEPT_BAD_COOKIE_*
	* file.c (readHeader): accept_bad_cookie is one of ACCEPT_BAD_COOKIE_*
	* fm.h (PERHAPS): deleted
	* fm.h (ACCEPT_BAD_COOKIE_*): added
	* rc.c (n_s): added
	* rc.c (N_S): added
	* rc.c (badcookiestr): use N_S(ACCEPT_BAD_COOKIE_*)

2002-01-24  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02896] fid attr value should be in sequence
	* table.c (feed_table_tag): s/line/""/ for HTML_FORM,HTML_N_FORM

2002-01-24  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02894] Re: goURL
	* file.c (HTMLtagproc1): s/goURL/gorURL/
	* keybind.c (EscKeymap): M-u = GOTO_RELATIVE
	* keybind_lynx.c (EscKeymap): ditto
	* doc/keymap.default: ditto
	* doc/keymap.lynx: ditto