@@ -1,3 +1,9 @@
+2002-01-26  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 02909] wrong table width calculation (sf.net Bug#506949)
+	* table.c (correct_table_matrix4): added
+	* table.c (set_table_matrix0): use correct_table_matrix4()
+
 2002-01-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 02908] document code of frame
